<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_search"
        android:name="ru.park.friends.newsreader.news.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="ru.park.friends.newsreader.news.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/feed_fragment" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="ru.park.friends.newsreader.news.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment" />

</navigation>